versions/v3.6.0/build/dts/api/bindings/gpio/nordic,nrf-gpio-forwarder.md
---
version: v3.6.0
source_url: https://docs.zephyrproject.org/3.6.0/build/dts/api/bindings/gpio/nordic,nrf-gpio-forwarder.html
original_path: build/dts/api/bindings/gpio/nordic,nrf-gpio-forwarder.html
---

This is the documentation for the latest (main) development branch of
Zephyr. If you are looking for the documentation of previous releases, use
the drop-down menu on the left and select the desired version.

# nordic,nrf-gpio-forwarder

Vendor: [Nordic Semiconductor](../../bindings.md#dt-vendor-nordic)

## Description

```text
This is an abstract device responsible for forwarding pins between cores.

In nRF53 family of SoCs, GPIO pins must be explicitly forwarded by
the application core to the network core if the latter should drive them.
The purpose of this abstract device is to represent all GPIO pins that the
nRF53 application core should forward to the nRF53 network core.

Once the control over selected GPIO pins is forwarded to it, the network
core is responsible for configuring the pins and driving them as needed.

Here is an example of how a nrf-gpio-forwarder can be used with a nRF5340
combined with a nRF21540 Front-End module. Consider the following node
present in DTS file targeted for the nRF5340 network core, which defines
the details of the nRF21540 Front-End module's interface:

nrf_radio_fem: nrf21540 {
  compatible = "nordic,nrf21540-fem";
  tx-en-gpios = <&gpio0 30 GPIO_ACTIVE_HIGH>;
  rx-en-gpios = <&gpio1 11 GPIO_ACTIVE_HIGH>;
  pdn-gpios   = <&gpio1 10 GPIO_ACTIVE_HIGH>;
  mode-gpios  = <&gpio1 12 GPIO_ACTIVE_HIGH>;
};

Since the nRF21540 Front-End module should be controlled by the nRF5340
network core, all the GPIO pins used to control it must be forwarded by
the nRF5340 application core to the network core. Consider the following
nrf-gpio-forwarder node defined in DTS file targeted for the nRF5340
application core:

gpio_fwd: nrf-gpio-forwarder {
  compatible = "nordic,nrf-gpio-forwarder";
  nrf21540-gpio-if {
    gpios = <&gpio0 30 0>, <&gpio1 11 0>, <&gpio1 10 0>, <&gpio1 12 0>;
  };
};

In the above example, the nrf-gpio-forwarder node is configured to forward
control over the following GPIO pins to the network core:

  - P0.30 (matching `tx-en-gpios`)
  - P1.11 (matching `rx-en-gpios`)
  - P1.10 (matching `pdn-gpios`)
  - P1.12 (matching `mode-gpios`)

Please note that the GPIO flags provided for child nodes of the forwarder
are ignored. In order to configure the GPIOs passed to the forwarder, their
GPIO flags must be set in the matching node that these GPIOs are forwarded
to. In the above example, the GPIO flags must be set in the nrf21540 node.
They are set to 0 in the nrf-gpio-forwarder node as they are ignored anyway.

Child nodes for the forwarder can be defined independently by multiple DTS
files. They are merged into a single node with multiple child nodes when
processing devicetree for an application build. However, in order for that
to happen, names of the child nodes must be unique in the scope of a single
nrf-gpio-forwarder instance.
```

## Properties

### Top level properties

These property descriptions apply to “nordic,nrf-gpio-forwarder”
nodes themselves. This page also describes child node
properties in the following sections.

Node specific propertiesDeprecated node specific propertiesBase properties

Properties not inherited from the base binding file.

(None)

Deprecated properties not inherited from the base binding file.

(None)

Properties inherited from the base binding file, which defines
common properties that may be set on many nodes. Not all of these
may apply to the “nordic,nrf-gpio-forwarder” compatible.

| Name | Type | Details |
| --- | --- | --- |
| `status` | `string` | ```text indicates the operational status of a device ```  Legal values: `'ok'`, `'okay'`, `'disabled'`, `'reserved'`, `'fail'`, `'fail-sss'`  See [Important properties](../../../intro-syntax-structure.md#dt-important-props) for more information. |
| `compatible` | `string-array` | ```text compatible strings ```  This property is **required**.  See [Important properties](../../../intro-syntax-structure.md#dt-important-props) for more information. |
| `reg` | `array` | ```text register space ```  See [Important properties](../../../intro-syntax-structure.md#dt-important-props) for more information. |
| `reg-names` | `string-array` | ```text name of each register space ``` |
| `interrupts` | `array` | ```text interrupts for device ```  See [Important properties](../../../intro-syntax-structure.md#dt-important-props) for more information. |
| `interrupts-extended` | `compound` | ```text extended interrupt specifier for device ``` |
| `interrupt-names` | `string-array` | ```text name of each interrupt ``` |
| `interrupt-parent` | `phandle` | ```text phandle to interrupt controller node ``` |
| `label` | `string` | ```text Human readable string describing the device (used as device_get_binding() argument) ```  See [Important properties](../../../intro-syntax-structure.md#dt-important-props) for more information.  This property is **deprecated**. |
| `clocks` | `phandle-array` | ```text Clock gate information ``` |
| `clock-names` | `string-array` | ```text name of each clock ``` |
| `#address-cells` | `int` | ```text number of address cells in reg property ``` |
| `#size-cells` | `int` | ```text number of size cells in reg property ``` |
| `dmas` | `phandle-array` | ```text DMA channels specifiers ``` |
| `dma-names` | `string-array` | ```text Provided names of DMA channel specifiers ``` |
| `io-channels` | `phandle-array` | ```text IO channels specifiers ``` |
| `io-channel-names` | `string-array` | ```text Provided names of IO channel specifiers ``` |
| `mboxes` | `phandle-array` | ```text mailbox / IPM channels specifiers ``` |
| `mbox-names` | `string-array` | ```text Provided names of mailbox / IPM channel specifiers ``` |
| `wakeup-source` | `boolean` | ```text Property to identify that a device can be used as wake up source.  When this property is provided a specific flag is set into the device that tells the system that the device is capable of wake up the system.  Wake up capable devices are disabled (interruptions will not wake up the system) by default but they can be enabled at runtime if necessary. ``` |
| `power-domain` | `phandle` | ```text Power domain the device belongs to.  The device will be notified when the power domain it belongs to is either suspended or resumed. ``` |
| `zephyr,pm-device-runtime-auto` | `boolean` | ```text Automatically configure the device for runtime power management after the init function runs. ``` |

### Child node properties

| Name | Type | Details |
| --- | --- | --- |
| `gpios` | `phandle-array` | ```text Array of GPIOs to be forwarded. Note that GPIO flags provided for elements of this array are ignored. In order to configure the GPIOs from this array, their GPIO flags must be set in the matching node that these GPIOs are forwarded to. ```  This property is **required**. |
